--- a/src/css/common.less
+++ b/src/css/common.less
@@ -1,3 +1,16 @@
-body{
-  transform: rotate(10deg);
+body {
+  transform: rotate(0);
+}
+
+img{
+  width: 100px;
+  height: 100px;
+}
+
+.hello{
+  background-image: url('../assets/image/mindmap.png');
+  background-size: 100% 100%;
+  width: 100px;
+  height: 100px;
+  margin-top: 20px;
 }
